stopped rows from overflowing

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 .container {
   display: grid;
   grid-template-columns: 250px 1fr;
-  grid-template-rows: 200px 1fr;
+  grid-template-rows: auto 1fr;
 }
 
 .column1a, .column1b, .column1c, .dash {
@@ -14,7 +14,8 @@ body {
   grid-template-rows: repeat(5, 1fr);
   align-items: center;
   grid-gap: 15px;
-  background-color: darkgray;
+  background-color:rgb(30, 171, 232);
+
 }
 
 .column1a {
@@ -26,25 +27,31 @@ body {
 }
 
 .dash {
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: 2fr 1fr;
+  grid-template-columns: clamp(20px, 20%, 35px) 1fr;
 }
 
 .column2 {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 15vh .5vh 75vh;
+  grid-template-rows: clamp(75px, 30%, 125px) 20px 75vh;
   grid-gap: 20px;
   height: 1000px;
 }
 
 #dash {
   font-size: 30px;
+
+}
+
+.column1labels{
+  color: white;
 }
 
 .row1 {
   display: grid;
   grid-template-columns: 1.5fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: repeat(3,clamp(70px, 10%, 75px));
   background-color: white;
 }
 
